authul_macros/tests/errors/table/attr_name_no_equals.rs
#[authul_macros::authul_table(name)]
struct Foo;

fn main() {
}
